--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.0.1
-transformers==4.16.1
+Flask==3.0.3
+matplotlib==3.8.4
+numpy==1.26.4
+open3d==0.18.0
+Pillow==10.3.0
+requests==2.31.0
 torch==1.9.0
-numpy==1.21.0
-Pillow==8.3.1
-matplotlib==3.4.2
-open3d==0.13.0
+transformers==4.39.3
